# src/utils/swagger/docs/swaggerDocs.json
@@ -55,6 +55,20 @@
               "description": "The id of the post",
               "required": false,
               "type": "string"
+            },
+            {
+              "name": "offset",
+              "in": "query",
+              "description": "The offset Desired",
+              "required": false,
+              "type": "number"
+            },
+            {
+              "name": "limit",
+              "in": "query",
+              "description": "The max ammount of posts",
+              "required": false,
+              "type": "number"
             }
           ],
           "responses":{
@@ -116,6 +130,20 @@
               "description": "The name of the user",
               "required": false,
               "type": "string"
+            },
+            {
+              "name": "offset",
+              "in": "query",
+              "description": "The offset Desired",
+              "required": false,
+              "type": "number"
+            },
+            {
+              "name": "limit",
+              "in": "query",
+              "description": "The max ammount of posts",
+              "required": false,
+              "type": "number"
             }
           ],
           "responses":{
@@ -161,5 +189,39 @@
               "description": "Post found"
             }
           }}
-  }}
+      },
+      "/v1/twit/post/comments":{
+        "get": {
+          "summary": "Obtener todos los posts de un usuario",
+          "description": "Use this endpoint to authenticate user.",
+          "parameters": [
+            {
+              "name": "post_id",
+              "in": "query",
+              "description": "The name of the user",
+              "required": false,
+              "type": "string"
+            },
+            {
+              "name": "offset",
+              "in": "query",
+              "description": "The offset Desired",
+              "required": false,
+              "type": "number"
+            },
+            {
+              "name": "limit",
+              "in": "query",
+              "description": "The max ammount of posts",
+              "required": false,
+              "type": "number"
+            }
+          ],
+          "responses":{
+            "200":{
+              "description": "User Posts encontrados"
+            }
+          }}
+      }
+    }
 }
